# Elke

./: .gitignore  elke_startup.sh  readme.md  robot_debug_cli.py
AI/: Modelfile
ESP32-S3/: Sketch.fzz  Sketch_motherboard.fzz  platformio.ini
ESP32-S3/src/: cmd_vel.cpp  cmd_vel.h  encoders.cpp  encoders.h  main.cpp  motors.cpp  motors.h  robot_params.h  ros_utils.cpp  ros_utils.h  wheels_status.cpp  wheels_status.h
Motherboard/External_libs/: Pololu DRV 8833 Dual Motor Driver Carrier.fzpz
audio/: elke_listener.py  stt_whisper_node.py  voice_session_manager.py
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/audio/share/audio/: package.sh  package.xml
ros2_ws/install/elke_ai/lib/elke_ai/: elke_ai_bridge
ros2_ws/install/elke_ai/share/elke_ai/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/log/: latest_build
ros2_ws/src/audio/: LICENSE  README.md  package.xml  setup.py
ros2_ws/src/audio/audio/: elke_listener.py  stt_whisper_node.py  voice_session_manager.py
ros2_ws/src/audio/launch/: voice_stack.launch.py
ros2_ws/src/audio/resources/: hey-elke_it_raspberry-pi_v3_0_0.ppn
ros2_ws/src/elke_ai/: package.xml  setup.cfg  setup.py
ros2_ws/src/elke_ai/elke_ai/: __init__.py  elke_ai_bridge_node.py
systemd/: elke_ai_bridge.service  elke_startup.service
